Bug 927413 - Gracefully handle 0 sized DrawWindow rects. r=roc